# android-spatialite

./: .gitignore  HOWTO DS-5 native debugging  README  README.md  TROUBLESHOOTING  build.gradle  build.sh  settings.gradle
lib/src/main/jni/ndk-modules/freexl/freexl/: AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config-msvc.h  config.h  config.status  configure  configure.ac  freexl.pc  libtool  makefile.vc  nmake.opt
lib/src/main/jni/ndk-modules/freexl/freexl-1.0.2/: COPYING  Doxyfile.in  Makefile.am  config.h.in  configure.ac  freexl.pc.in  mainpage.doxy
lib/src/main/jni/ndk-modules/freexl/freexl-1.0.2/examples/: Makefile.in  examples.doxy
lib/src/main/jni/ndk-modules/freexl/freexl-1.0.2/headers/: Makefile.in
lib/src/main/jni/ndk-modules/freexl/freexl-1.0.2/src/: Makefile.am  Makefile.in
lib/src/main/jni/ndk-modules/freexl/freexl-1.0.2/tests/: Makefile.in  check_excel2003_biff2.c  check_excel2003_biff3.c  check_excel2003_biff3_info.c  check_excel2003_biff4.c  check_excel2003_biff4_1904.c  check_excel2003_biff4_workbook.c  open_excel2003.c  open_oocalc95.c  open_oocalc97.c  test_under_valgrind.sh
lib/src/main/jni/ndk-modules/freexl/freexl-1.0.2/tests/testdata/: oocalc_empty95.xls  oocalc_empty97.xls  simple2003_4_1904.xls  testbool.xls  testcase1.xls
lib/src/main/jni/ndk-modules/freexl/freexl/examples/: Makefile  Makefile.am  Makefile.in  test_xl  test_xl.c  xl2sql  xl2sql.c
lib/src/main/jni/ndk-modules/freexl/freexl/examples/.deps/: test_xl.Po  xl2sql.Po
lib/src/main/jni/ndk-modules/freexl/freexl/examples/.libs/: test_xl  xl2sql
lib/src/main/jni/ndk-modules/freexl/freexl/headers/: Makefile  Makefile.am  Makefile.in  freexl.h  freexl_internals.h
lib/src/main/jni/ndk-modules/freexl/freexl/images/: piazza.eps
lib/src/main/jni/ndk-modules/freexl/freexl/src/: Makefile  Makefile.am  Makefile.in  freexl.c  freexl.lo
lib/src/main/jni/ndk-modules/freexl/freexl/src/.deps/: freexl.Plo
lib/src/main/jni/ndk-modules/freexl/freexl/src/.libs/: libfreexl.la  libfreexl.lai
lib/src/main/jni/ndk-modules/freexl/freexl/tests/: Makefile  Makefile.am  Makefile.in  check_boolean_biff8.c  check_datetime_biff8.c  check_excel2003_biff3_error_checks.c  check_excel2003_biff5_workbook.c  check_excel2003_biff8.c  check_oocalc95.c  check_oocalc97.c  check_oocalc97_intvalue.c  walk_fat_oocalc97.c  walk_sst_oocalc97.c
lib/src/main/jni/ndk-modules/freexl/freexl/tests/testdata/: datetime2003.xls  empty2003.xls  oocalc_simple95.xls  oocalc_simple97.xls  simple2003.xls  simple2003_3.xls  simple2003_4.xls  simple2003_4WB.xlw  simple2003_5WB.xls
lib/src/main/jni/ndk-modules/librttopo/librttopo-1.1.0/: .drone.yml  .editorconfig  .gitignore  .gitlab-ci.yml  CREDITS  HOWTO_RELEASE  Makefile.am  NEWS.md  README.md  TODO  autogen.sh  configure.ac  makefile.vc  nmake.opt  rttopo.pc.in
lib/src/main/jni/ndk-modules/librttopo/librttopo-1.1.0/doc/: BUILDING-ON-WINDOWS.md  DATASTORES.md  g_serialized.txt
lib/src/main/jni/ndk-modules/librttopo/librttopo-1.1.0/docker/build-test/: Dockerfile.debian-sid  Makefile
lib/src/main/jni/ndk-modules/librttopo/librttopo-1.1.0/headers/: Makefile.am  librttopo.h  librttopo_geom.h.in
lib/src/main/jni/ndk-modules/librttopo/librttopo-1.1.0/src/: Makefile.am  box2d.c  bytebuffer.c  bytebuffer.h  g_box.c  g_serialized.c  g_util.c  librttopo_geom_internal.h  librttopo_internal.h  measures.c  measures.h  measures3d.c  measures3d.h  ptarray.c  rtalgorithm.c  rtcircstring.c  rtcollection.c  rtcompound.c  rtcurvepoly.c  rtgeodetic.c  rtgeodetic.h  rtgeom.c  rtgeom_api.c  rtgeom_debug.c  rtgeom_geos.c  rtgeom_geos.h  rtgeom_geos_clean.c  rtgeom_geos_node.c  rtgeom_geos_split.c  rtgeom_log.h  rtgeom_topo.c  rthomogenize.c  rtin_geojson.c  rtin_twkb.c  rtin_wkb.c  rtiterator.c  rtline.c  rtlinearreferencing.c  rtmcurve.c  rtmline.c  (+29 more)
lib/src/main/jni/ndk-modules/libspatialite/libspatialite-4.2.1-rc1/test/sql_stmt_libxml2_tests/: Makefile.am  Makefile.in  registerGraphic1.testcase  registerGraphic10.testcase  registerGraphic11.testcase  registerGraphic12.testcase  registerGraphic13.testcase  registerGraphic14.testcase  registerGraphic15.testcase  registerGraphic16.testcase  registerGraphic17.testcase  registerGraphic18.testcase  registerGraphic19.testcase  registerGraphic2.testcase  registerGraphic20.testcase  registerGraphic21.testcase  registerGraphic22.testcase  registerGraphic3.testcase  registerGraphic4.testcase  registerGraphic5.testcase  registerGraphic6.testcase  registerGraphic7.testcase  registerGraphic8.testcase  registerGraphic9.testcase  registerGroup1.testcase  registerGroup14.testcase  registerGroup15.testcase  registerGroup16.testcase  (+83 more)
lib/src/main/jni/ndk-modules/libspatialite/libspatialite-5.0.0-beta0/: Android_4.4.0.mk  Makefile.am  Makefile.in  aclocal.m4  config-msvc.h  config.h  config.h.in  configure  configure.ac  makefile.vc  makefile64.vc  makefile_mod.vc  makefile_mod64.vc  nmake.opt  nmake64.opt  nmake_mod.opt  nmake_mod64.opt  spatialite-4.4.0.mk  spatialite-sql-latest.html
lib/src/main/jni/ndk-modules/libspatialite/libspatialite-5.0.0-beta0/examples/: Makefile.am  Makefile.in  demo1.c  demo2.c
lib/src/main/jni/ndk-modules/libspatialite/libspatialite-5.0.0-beta0/src/: Makefile.am  Makefile.in
lib/src/main/jni/ndk-modules/libspatialite/libspatialite-5.0.0-beta0/test/: 000323485.gpx  Gpx-sample.gpx  Makefile.am  Makefile.in  check_bufovflw.c  check_clone_table.c  check_control_points.c  check_create.c  check_cutter.c  check_dbf_load.c  check_dxf.c  check_exif.c  check_exif2.c  check_extension.c  check_extra_relations_fncts.c  check_fdo1.c  check_fdo3.c  check_gaia_utf8.c  check_gaia_util.c  check_geom_aux.c  check_geoscvt_fncts.c  check_gpkgInsertEpsgSRID.c  check_gpkgMode.c  check_gpkgVirtual.c  check_init_full.c  check_libxml2.c  check_mbrcache.c  check_multithread.c  check_network2d.c  check_network3d.c  check_network_log.c  check_relations_fncts.c  check_sequence.c  check_shp_load.c  check_shp_load_3d.c  check_spatialindex.c  check_sql_stmt.c  check_stored_proc.c  check_styling.c  check_topology2d.c  (+38 more)
(+4319 files in other folders)
