
EXTRA_DIST = addfileid1.testcase \
	addfileid2.testcase \
	addfileid3.testcase \
	addfileid4.testcase \
	addfileid5.testcase \
	addfileid6.testcase \
	addfileid7.testcase \
	addparentid1.testcase \
	addparentid2.testcase \
	addparentid3.testcase \
	addparentid4.testcase \
	addparentid5.testcase \
	addparentid6.testcase \
	addparentid7.testcase \
	createisometa1.testcase \
	createisometa2.testcase \
	createisometa3.testcase \
	createisometa4.testcase \
	createisometa5.testcase \
	createisometa6.testcase \
	createstyling1.testcase \
	createstyling2.testcase \
	createstyling3.testcase \
	createstyling4.testcase \
	createstyling5.testcase \
	createstyling6.testcase \
	getIsoMetaId1.testcase \
	getIsoMetaId2.testcase \
	getIsoMetaId3.testcase \
	getIsoMetaId4.testcase \
	getIsoMetaId5.testcase \
	iscompressedxmlblob1.testcase \
	iscompressedxmlblob2.testcase \
	iscompressedxmlblob3.testcase \
	iscompressedxmlblob4.testcase \
	iscompressedxmlblob5.testcase \
	iscompressedxmlblob6.testcase \
	iscompressedxmlblob7.testcase \
	isisometadata1.testcase \
	isisometadata2.testcase \
	isisometadata3.testcase \
	isisometadata4.testcase \
	isisometadata5.testcase \
	isisometadata6.testcase \
	isisometadata7.testcase \
	isschemavalidatedxmlblob1.testcase \
	isschemavalidatedxmlblob2.testcase \
	isschemavalidatedxmlblob3.testcase \
	isschemavalidatedxmlblob4.testcase \
	isschemavalidatedxmlblob5.testcase \
	isschemavalidatedxmlblob6.testcase \
	issldserststyle1.testcase \
	issldserststyle2.testcase \
	issldserststyle3.testcase \
	issldserststyle4.testcase \
	issldserststyle5.testcase \
	issldserststyle6.testcase \
	issldserststyle7.testcase \
	issldsestyle1.testcase \
	issldsestyle2.testcase \
	issldsestyle3.testcase \
	issldsestyle4.testcase \
	issldsestyle5.testcase \
	issldsestyle6.testcase \
	issldsestyle7.testcase \
	issvg1.testcase \
	issvg2.testcase \
	issvg3.testcase \
	issvg4.testcase \
	issvg5.testcase \
	issvg6.testcase \
	issvg7.testcase \
	isvalidxmlblob1.testcase \
	isvalidxmlblob2.testcase \
	isvalidxmlblob3.testcase \
	isvalidxmlblob4.testcase \
	isvalidxmlblob5.testcase \
	isvalidxmlblob6.testcase \
	registerGraphic10.testcase \
	registerGraphic11.testcase \
	registerGraphic12.testcase \
	registerGraphic13.testcase \
	registerGraphic14.testcase \
	registerGraphic15.testcase \
	registerGraphic16.testcase \
	registerGraphic17.testcase \
	registerGraphic18.testcase \
	registerGraphic19.testcase \
	registerGraphic1.testcase \
	registerGraphic20.testcase \
	registerGraphic21.testcase \
	registerGraphic22.testcase \
	registerGraphic2.testcase \
	registerGraphic3.testcase \
	registerGraphic4.testcase \
	registerGraphic5.testcase \
	registerGraphic6.testcase \
	registerGraphic7.testcase \
	registerGraphic8.testcase \
	registerGraphic9.testcase \
	registerGroup14.testcase \
	registerGroup15.testcase \
	registerGroup16.testcase \
	registerGroup17.testcase \
	registerGroup18.testcase \
	registerGroup1.testcase \
	registerGroup25.testcase \
	registerGroup26.testcase \
	registerGroup27.testcase \
	registerGroup28.testcase \
	registerGroup29.testcase \
	registerGroup2.testcase \
	registerGroup3.testcase \
	registerGroup4.testcase \
	registerGroup5.testcase \
	registerGroup6.testcase \
	registerGroup7.testcase \
	registerGroup8.testcase \
	registerGroupStyle1.testcase \
	registerGroupStyle2.testcase \
	registerGroupStyle3.testcase \
	registerGroupStyle4.testcase \
	registerGroupStyle5.testcase \
	registerGroupStyle6.testcase \
	registerGroupStyle7.testcase \
	registerGroupStyle8.testcase \
	registerGroupStyle9.testcase \
	registerGroupStyle10.testcase \
	registerGroupStyle11.testcase \
	registerGroupStyle12.testcase \
	registerGroupStyle13.testcase \
	registerGroupStyle14.testcase \
	registerGroupStyle15.testcase \
	registerGroupStyle16.testcase \
	registerGroupStyle17.testcase \
	registerIsoMeta10.testcase \
	registerIsoMeta11.testcase \
	registerIsoMeta12.testcase \
	registerIsoMeta13.testcase \
	registerIsoMeta14.testcase \
	registerIsoMeta1.testcase \
	registerIsoMeta2.testcase \
	registerIsoMeta3.testcase \
	registerIsoMeta4.testcase \
	registerIsoMeta5.testcase \
	registerIsoMeta6.testcase \
	registerIsoMeta7.testcase \
	registerIsoMeta8.testcase \
	registerIsoMeta9.testcase \
	registerRaster10.testcase \
	registerRaster11.testcase \
	registerRaster12.testcase \
	registerRaster13.testcase \
	registerRaster14.testcase \
	registerRaster15.testcase \
	registerRaster16.testcase \
	registerRaster17.testcase \
	registerRaster1.testcase \
	registerRaster2.testcase \
	registerRaster3.testcase \
	registerRaster4.testcase \
	registerRaster5.testcase \
	registerRaster6.testcase \
	registerRaster7.testcase \
	registerRaster8.testcase \
	registerRaster9.testcase \
	registerVector10.testcase \
	registerVector11.testcase \
	registerVector12.testcase \
	registerVector13.testcase \
	registerVector14.testcase \
	registerVector15.testcase \
	registerVector16.testcase \
	registerVector17.testcase \
	registerVector18.testcase \
	registerVector19.testcase \
	registerVector1.testcase \
	registerVector20.testcase \
	registerVector21.testcase \
	registerVector22.testcase \
	registerVector2.testcase \
	registerVector3.testcase \
	registerVector4.testcase \
	registerVector5.testcase \
	registerVector6.testcase \
	registerVector7.testcase \
	registerVector8.testcase \
	registerVector9.testcase \
	setfileid1.testcase \
	setfileid2.testcase \
	setfileid3.testcase \
	setfileid4.testcase \
	setfileid5.testcase \
	setGroupInfos10.testcase \
	setGroupInfos11.testcase \
	setGroupInfos12.testcase \
	setGroupInfos13.testcase \
	setGroupInfos1.testcase \
	setGroupInfos2.testcase \
	setGroupInfos3.testcase \
	setGroupInfos4.testcase \
	setGroupInfos5.testcase \
	setGroupInfos6.testcase \
	setGroupInfos7.testcase \
	setGroupInfos8.testcase \
	setGroupInfos9.testcase \
	setparentid1.testcase \
	setparentid2.testcase \
	setparentid3.testcase \
	setparentid4.testcase \
	setparentid5.testcase \
	xmlblobgetabstract1.testcase \
	xmlblobgetabstract2.testcase \
	xmlblobgetabstract3.testcase \
	xmlblobgetabstract4.testcase \
	xmlblobgetabstract5.testcase \
	xmlblobgetabstract6.testcase \
	xmlblobgetdocumentsize1.testcase \
	xmlblobgetdocumentsize2.testcase \
	xmlblobgetdocumentsize3.testcase \
	xmlblobgetdocumentsize4.testcase \
	xmlblobgetdocumentsize5.testcase \
	xmlblobgetdocumentsize6.testcase \
	xmlblobgetencoding1.testcase \
	xmlblobgetencoding2.testcase \
	xmlblobgetencoding3.testcase \
	xmlblobgetencoding4.testcase \
	xmlblobgetencoding5.testcase \
	xmlblobgetencoding6.testcase \
	xmlblobgetencoding7.testcase \
	xmlblobgetfileid1.testcase \
	xmlblobgetfileid2.testcase \
	xmlblobgetfileid3.testcase \
	xmlblobgetfileid4.testcase \
	xmlblobgetfileid5.testcase \
	xmlblobgetfileid6.testcase \
	xmlblobgetgeometry1.testcase \
	xmlblobgetgeometry2.testcase \
	xmlblobgetgeometry3.testcase \
	xmlblobgetgeometry4.testcase \
	xmlblobgetgeometry5.testcase \
	xmlblobgetgeometry6.testcase \
	xmlblobgetinternalschemauri1.testcase \
	xmlblobgetinternalschemauri2.testcase \
	xmlblobgetinternalschemauri3.testcase \
	xmlblobgetinternalschemauri4.testcase \
	xmlblobgetinternalschemauri5.testcase \
	xmlblobgetparentid1.testcase \
	xmlblobgetparentid2.testcase \
	xmlblobgetparentid3.testcase \
	xmlblobgetparentid4.testcase \
	xmlblobgetparentid5.testcase \
	xmlblobgetparentid6.testcase \
	xmlblobgetschemauri1.testcase \
	xmlblobgetschemauri2.testcase \
	xmlblobgetschemauri3.testcase \
	xmlblobgetschemauri4.testcase \
	xmlblobgetschemauri5.testcase \
	xmlblobgetschemauri6.testcase \
	xmlblobgetname1.testcase \
	xmlblobgetname2.testcase \
	xmlblobgetname3.testcase \
	xmlblobgetname4.testcase \
	xmlblobgetname5.testcase \
	xmlblobgetname6.testcase \
	xmlblobgetname7.testcase \
	xmlblobgetname8.testcase \
	xmlblobgettitle1.testcase \
	xmlblobgettitle2.testcase \
	xmlblobgettitle3.testcase \
	xmlblobgettitle4.testcase \
	xmlblobgettitle5.testcase \
	xmlblobgettitle6.testcase \
	xmlcompress1.testcase \
	xmlcompress2.testcase \
	xmlcompress3.testcase \
	xmlcompress4.testcase \
	xmlcompress5.testcase \
	xmlcompress6.testcase \
	xmlcompress7.testcase \
	xmlcompress8.testcase \
	xmlfromblob10.testcase \
	xmlfromblob11.testcase \
	xmlfromblob12.testcase \
	xmlfromblob13.testcase \
	xmlfromblob1.testcase \
	xmlfromblob2.testcase \
	xmlfromblob3.testcase \
	xmlfromblob4.testcase \
	xmlfromblob5.testcase \
	xmlfromblob6.testcase \
	xmlfromblob7.testcase \
	xmlfromblob8.testcase \
	xmlfromblob9.testcase \
	xmltextfromblob10.testcase \
	xmltextfromblob11.testcase \
	xmltextfromblob12.testcase \
	xmltextfromblob13.testcase \
	xmltextfromblob1.testcase \
	xmltextfromblob2.testcase \
	xmltextfromblob3.testcase \
	xmltextfromblob4.testcase \
	xmltextfromblob5.testcase \
	xmltextfromblob6.testcase \
	xmltextfromblob7.testcase \
	xmltextfromblob8.testcase \
	xmltextfromblob9.testcase \
	xmltoblob10.testcase \
	xmltoblob11.testcase \
	xmltoblob12.testcase \
	xmltoblob13.testcase \
	xmltoblob14.testcase \
	xmltoblob15.testcase \
	xmltoblob16.testcase \
	xmltoblob17.testcase \
	xmltoblob18.testcase \
	xmltoblob1.testcase \
	xmltoblob2.testcase \
	xmltoblob3.testcase \
	xmltoblob4.testcase \
	xmltoblob5.testcase \
	xmltoblob6.testcase \
	xmltoblob7.testcase \
	xmltoblob8.testcase \
	xmltoblob9.testcase \
	xmluncompress1.testcase \
	xmluncompress2.testcase \
	xmluncompress3.testcase \
	xmluncompress4.testcase \
	xmluncompress5.testcase \
	xmluncompress6.testcase \
	xmluncompress7.testcase \
	xmluncompress8.testcase 
