
EXTRA_DIST = decodeurl1.testcase \
	decodeurl2.testcase \
	decodeurl3.testcase \
	decodeurl4.testcase \
	decodeurl5.testcase \
	decodeurl6.testcase \
	decodeurl7.testcase \
	decodeurl8.testcase \
	decodeurl9.testcase \
	decodeurl10.testcase \
	decodeurl11.testcase \
	encodeurl1.testcase \
	encodeurl2.testcase \
	encodeurl3.testcase \
	encodeurl4.testcase \
	encodeurl5.testcase \
	encodeurl6.testcase \
	encodeurl7.testcase \
	encodeurl8.testcase \
	encodeurl9.testcase \
	encodeurl10.testcase \
	encodeurl11.testcase \
	sp_allvars1.testcase \
	sp_allvars2.testcase \
	sp_allvars3.testcase \
	sp_allvars4.testcase \
	sp_allvars5.testcase \
	sp_allvars6.testcase \
	sp_cookedsql1.testcase \
	sp_cookedsql2.testcase \
	sp_cookedsql3.testcase \
	sp_cookedsql4.testcase \
	sp_cookedsql5.testcase \
	sp_cookedsql6.testcase \
	sp_cookedsql7.testcase \
	sp_cookedsql8.testcase \
	sp_cookedsql9.testcase \
	sp_cookedsql10.testcase \
	sp_cookedsql11.testcase \
	sp_cookedsql12.testcase \
	sp_cookedsql13.testcase \
	sp_createtables.testcase \
	sp_delete1.testcase \
	sp_delete2.testcase \
	sp_delete3.testcase \
	sp_delete4.testcase \
	sp_delete5.testcase \
	sp_deletevar1.testcase \
	sp_deletevar2.testcase \
	sp_deletevar3.testcase \
	sp_deletevar4.testcase \
	sp_deletevar5.testcase \
	sp_execute1.testcase \
	sp_execute2.testcase \
	sp_execute3.testcase \
	sp_execute4.testcase \
	sp_execute5.testcase \
	sp_execute6.testcase \
	sp_execute7.testcase \
	sp_execute8.testcase \
	sp_execute9.testcase \
	sp_execute10.testcase \
	sp_execute11.testcase \
	sp_execute12.testcase \
	sp_execute13.testcase \
	sp_executestored1.testcase \
	sp_executestored2.testcase \
	sp_executestored3.testcase \
	sp_executestored4.testcase \
	sp_executestored5.testcase \
	sp_fetch1.testcase \
	sp_fetch2.testcase \
	sp_fetch3.testcase \
	sp_fetch4.testcase \
	sp_fetch5.testcase \
	sp_fetchval1.testcase \
	sp_fetchval2.testcase \
	sp_fetchval3.testcase \
	sp_fetchval4.testcase \
	sp_fetchval5.testcase \
	sp_fetchvar1.testcase \
	sp_fetchvar2.testcase \
	sp_fetchvar3.testcase \
	sp_fetchvar4.testcase \
	sp_fetchvar5.testcase \
	sp_fromtext1.testcase \
	sp_fromtext2.testcase \
	sp_fromtext3.testcase \
	sp_fromtext4.testcase \
	sp_fromtext5.testcase \
	sp_fromtext6.testcase \
	sp_fromtext7.testcase \
	sp_fromtext8.testcase \
	sp_fromtext9.testcase \
	sp_fromtext10.testcase \
	sp_fromtext11.testcase \
	sp_fromtext12.testcase \
	sp_isvalid1.testcase \
	sp_isvalid2.testcase \
	sp_isvalid3.testcase \
	sp_isvalid4.testcase \
	sp_isvalid5.testcase \
	sp_isvalid6.testcase \
	sp_isvalidvar1.testcase \
	sp_isvalidvar2.testcase \
	sp_isvalidvar3.testcase \
	sp_isvalidvar4.testcase \
	sp_isvalidvar5.testcase \
	sp_isvalidvar6.testcase \
	sp_lasterror.testcase \
	sp_numvars1.testcase \
	sp_numvars2.testcase \
	sp_numvars3.testcase \
	sp_numvars4.testcase \
	sp_numvars5.testcase \
	sp_numvars6.testcase \
	sp_rawsql1.testcase \
	sp_rawsql2.testcase \
	sp_rawsql3.testcase \
	sp_rawsql4.testcase \
	sp_rawsql5.testcase \
	sp_rawsql6.testcase \
	sp_register1.testcase \
	sp_register2.testcase \
	sp_register3.testcase \
	sp_register4.testcase \
	sp_register5.testcase \
	sp_register6.testcase \
	sp_register7.testcase \
	sp_register8.testcase \
	sp_register9.testcase \
	sp_register10.testcase \
	sp_register11.testcase \
	sp_register12.testcase \
	sp_register13.testcase \
	sp_register14.testcase \
	sp_registervar1.testcase \
	sp_registervar2.testcase \
	sp_registervar3.testcase \
	sp_registervar4.testcase \
	sp_registervar5.testcase \
	sp_registervar6.testcase \
	sp_registervar7.testcase \
	sp_registervar8.testcase \
	sp_registervar9.testcase \
	sp_registervar10.testcase \
	sp_registervar11.testcase \
	sp_registervar12.testcase \
	sp_registervar13.testcase \
	sp_updatesql1.testcase \
	sp_updatesql2.testcase \
	sp_updatesql3.testcase \
	sp_updatesql4.testcase \
	sp_updatesql5.testcase \
	sp_updatesql6.testcase \
	sp_updatesql7.testcase \
	sp_updatesql8.testcase \
	sp_updatesql9.testcase \
	sp_updatetitle1.testcase \
	sp_updatetitle2.testcase \
	sp_updatetitle3.testcase \
	sp_updatetitle4.testcase \
	sp_updatetitle5.testcase \
	sp_updatetitle6.testcase \
	sp_updatetitle7.testcase \
	sp_updatetitle8.testcase \
	sp_updatetitle9.testcase \
	sp_updatevartitle1.testcase \
	sp_updatevartitle2.testcase \
	sp_updatevartitle3.testcase \
	sp_updatevartitle4.testcase \
	sp_updatevartitle5.testcase \
	sp_updatevartitle6.testcase \
	sp_updatevartitle7.testcase \
	sp_updatevartitle8.testcase \
	sp_updatevartitle9.testcase \
	sp_updatevarval1.testcase \
	sp_updatevarval2.testcase \
	sp_updatevarval3.testcase \
	sp_updatevarval4.testcase \
	sp_updatevarval5.testcase \
	sp_updatevarval6.testcase \
	sp_updatevarval7.testcase \
	sp_updatevarval8.testcase \
	sp_updatevarval9.testcase \
	sp_var_n1.testcase \
	sp_var_n2.testcase \
	sp_var_n3.testcase \
	sp_var_n4.testcase \
	sp_var_n5.testcase \
	sp_var_n6.testcase \
	sp_var_n7.testcase \
	sp_var_n8.testcase \
	sp_var_n9.testcase \
	sp_var_n10.testcase \
	sp_var_n11.testcase \
	sp_var_n12.testcase \
	sp_vararg1.testcase \
	sp_vararg2.testcase \
	sp_vararg3.testcase \
	sp_vararg4.testcase \
	sp_vararg5.testcase \
	sp_vararg6.testcase \
	sp_vararg7.testcase \
	sp_vararg8.testcase \
	sp_vararg9.testcase
