
EXTRA_DIST = askml10.testcase \
	askml11.testcase \
	askml1.testcase \
	askml2.testcase \
	askml3.testcase \
	askml4.testcase \
	askml5.testcase \
	askml6.testcase \
	askml7.testcase \
	askml8.testcase \
	askml9.testcase \
	fromgml42.testcase \
	output10.testcase \
	output11.testcase \
	output12.testcase \
	output13.testcase \
	output14.testcase \
	output15.testcase \
	output16.testcase \
	output17.testcase \
	output18.testcase \
	output19.testcase \
	output1.testcase \
	output20.testcase \
	output21.testcase \
	output22.testcase \
	output23.testcase \
	output24.testcase \
	output25.testcase \
	output26.testcase \
	output27.testcase \
	output28.testcase \
	output29.testcase \
	output2.testcase \
	output30.testcase \
	output31.testcase \
	output32.testcase \
	output33.testcase \
	output34.testcase \
	output35.testcase \
	output36.testcase \
	output37.testcase \
	output38.testcase \
	output3.testcase \
	output4.testcase \
	output5.testcase \
	output6.testcase \
	output7.testcase \
	output8.testcase \
	output9.testcase
