
EXTRA_DIST = createrouterr.testcase \
	createrouting1.testcase \
	createrouting2.testcase \
	createrouting3.testcase \
	createrouting4.testcase \
	createrouting5.testcase \
	createrouting6.testcase \
	createrouting7.testcase \
	createrouting8.testcase \
	createrouting9.testcase \
	createrouting10.testcase \
	createrouting11.testcase \
	createrouting12.testcase \
	createrouting13.testcase \
	createrouting14.testcase \
	createroutnodes1.testcase \
	createroutnodes2.testcase \
	createroutnodes3.testcase \
	createroutnodes4.testcase \
	createroutnodes5.testcase \
	createroutnodes6.testcase \
	createroutnodes7.testcase \
	createroutnodes8.testcase \
	createroutnodes9.testcase \
	createroutnodes10.testcase \
	createroutnodes11.testcase \
	createroutnodes12.testcase \
	createroutnodes13.testcase \
	createroutnodes14.testcase \
	createroutnodes15.testcase \
	createroutnodes16.testcase \
	createroutnodes17.testcase \
	createroutnodes18.testcase \
	createroutnodes19.testcase \
	createroutnodes20.testcase	
