
EXTRA_DIST = blobfromfile1.testcase \
	blobfromfile2.testcase \
	blobfromfile3.testcase \
	blobfromfile4.testcase \
	blobtofile1.testcase \
	blobtofile2.testcase \
	blobtofile3.testcase \
	blobtofile4.testcase \
	eval1.testcase \
	eval2.testcase \
	eval3.testcase \
	eval4.testcase \
	exportdbf1.testcase \
	exportdbf2.testcase \
	exportdbf3.testcase \
	exportdbf4.testcase \
	exportdbf5.testcase \
	exportdbf6.testcase \
	exportdbf7.testcase \
	exportdbf8.testcase \
	exportdbf9.testcase \
	exportdbf10.testcase \
	exportdxf1.testcase \
	exportdxf2.testcase \
	exportdxf3.testcase \
	exportdxf4.testcase \
	exportdxf5.testcase \
	exportdxf6.testcase \
	exportdxf7.testcase \
	exportdxf7.testcase \
	exportdxf8.testcase \
	exportdxf9.testcase \
	exportdxf10.testcase \
	exportgeojson1.testcase \
	exportgeojson2.testcase \
	exportgeojson3.testcase \
	exportgeojson4.testcase \
	exportgeojson5.testcase \
	exportgeojson6.testcase \
	exportgeojson7.testcase \
	exportgeojson8.testcase \
	exportgeojson9.testcase \
	exportgeojson10.testcase \
	exportgeojson11.testcase \
	exportkml1.testcase \
	exportkml2.testcase \
	exportkml3.testcase \
	exportkml4.testcase \
	exportkml5.testcase \
	exportkml6.testcase \
	exportkml7.testcase \
	exportshp1.testcase \
	exportshp2.testcase \
	exportshp3.testcase \
	exportshp4.testcase \
	exportshp5.testcase \
	exportshp6.testcase \
	exportshp7.testcase \
	exportshp8.testcase \
	exportshp9.testcase \
	exportshp10.testcase \
	exportshp11.testcase \
	exportshp12.testcase \
	exportdxf11.testcase \
	importdbf1.testcase \
	importdbf2.testcase \
	importdbf3.testcase \
	importdbf4.testcase \
	importdbf5.testcase \
	importdbf6.testcase \
	importdbf7.testcase \
	importdbf8.testcase \
	importdbf9.testcase \
	importdbf10.testcase \
	importdbf11.testcase \
	importdbf12.testcase \
	importdbf13.testcase \
	importdxf1.testcase \
	importdxf2.testcase \
	importdxf3.testcase \
	importdxf4.testcase \
	importdxf5.testcase \
	importdxf6.testcase \
	importdxf7.testcase \
	importdxf8.testcase \
	importdxf9.testcase \
	importdxf10.testcase \
	importdxf11.testcase \
	importdxf12.testcase \
	importdxf13.testcase \
	importdxf14.testcase \
	importdxf15.testcase \
	importdxf16.testcase \
	importdxfdir1.testcase \
	importdxfdir2.testcase \
	importdxfdir3.testcase \
	importdxfdir4.testcase \
	importdxfdir5.testcase \
	importdxfdir6.testcase \
	importdxfdir7.testcase \
	importdxfdir8.testcase \
	importdxfdir9.testcase \
	importdxfdir10.testcase \
	importdxfdir11.testcase \
	importdxfdir12.testcase \
	importdxfdir13.testcase \
	importdxfdir14.testcase \
	importdxfdir15.testcase \
	importdxfdir16.testcase \
	importshp1.testcase \
	importshp2.testcase \
	importshp3.testcase \
	importshp4.testcase \
	importshp5.testcase \
	importshp6.testcase \
	importshp7.testcase \
	importshp8.testcase \
	importshp9.testcase \
	importshp10.testcase \
	importshp11.testcase \
	importshp12.testcase \
	importshp13.testcase \
	importshp14.testcase \
	importshp15.testcase \
	importshp16.testcase \
	importshp17.testcase \
	importshp18.testcase \
	importshp19.testcase \
	importshp20.testcase \
	importshp21.testcase \
	importshp22.testcase \
	importxls1.testcase \
	importxls2.testcase \
	importxls3.testcase \
	importxls4.testcase \
	importxls5.testcase \
	importxls6.testcase \
	importxls7.testcase \
	importxls8.testcase \
	importxls9.testcase \
	importxls10.testcase \
	importxls11.testcase \
	importxls12.testcase \
	importxls13.testcase \
	importxls14.testcase \
	importxls15.testcase \
	importxls16.testcase \
	importxls17.testcase \
	isXblob1.testcase \
	isXblob2.testcase \
	isXblob3.testcase \
	isXblob4.testcase \
	isXblob8.testcase \
	isXblob9.testcase \
	sp_fromfile1.testcase \
	sp_fromfile2.testcase \
	sp_fromfile3.testcase \
	sp_fromfile4.testcase \
	sp_fromfile5.testcase \
	sp_fromfile6.testcase \
	sp_fromfile7.testcase \
	sp_fromfile8.testcase \
	sp_fromfile9.testcase \
	sp_fromfile10.testcase \
	sp_fromfile11.testcase \
	sp_fromfile12.testcase
